--- a/projects/ngxsmk-datatable/src/lib/components/ngxsmk-datatable/ngxsmk-datatable.component.html
+++ b/projects/ngxsmk-datatable/src/lib/components/ngxsmk-datatable/ngxsmk-datatable.component.html
@@ -107,9 +107,9 @@
           @if (rowDetail) {
             <div 
               class="ngxsmk-datatable__header-cell ngxsmk-datatable__header-cell--detail-toggle"
-              [style.width.px]="40"
+              [style.width.px]="50"
             >
-              <span class="ngxsmk-datatable__header-cell-text">Details</span>
+              <i class="fas fa-info-circle"></i>
             </div>
           }
 
@@ -135,6 +135,8 @@
               class="ngxsmk-datatable__header-cell ngxsmk-datatable__header-cell--frozen-left"
               [class]="getHeaderClass(column)"
               [style.width.px]="columnWidths[column.id]"
+              [style.justify-content]="column.align === 'left' ? 'flex-start' : column.align === 'right' ? 'flex-end' : 'center'"
+              [style.text-align]="column.align || 'center'"
               [class.ngxsmk-datatable__header-cell--sortable]="column.sortable"
               [class.ngxsmk-datatable__header-cell--sorted]="isColumnSorted(column)"
               [class.ngxsmk-datatable__header-cell--resizing]="isResizingColumn(column)"
@@ -173,6 +175,8 @@
               class="ngxsmk-datatable__header-cell"
               [class]="getHeaderClass(column)"
               [style.width.px]="columnWidths[column.id]"
+              [style.justify-content]="column.align === 'left' ? 'flex-start' : column.align === 'right' ? 'flex-end' : 'center'"
+              [style.text-align]="column.align || 'center'"
               [class.ngxsmk-datatable__header-cell--sortable]="column.sortable"
               [class.ngxsmk-datatable__header-cell--sorted]="isColumnSorted(column)"
               [class.ngxsmk-datatable__header-cell--resizing]="isResizingColumn(column)"
@@ -211,6 +215,8 @@
               class="ngxsmk-datatable__header-cell ngxsmk-datatable__header-cell--frozen-right"
               [class]="getHeaderClass(column)"
               [style.width.px]="columnWidths[column.id]"
+              [style.justify-content]="column.align === 'left' ? 'flex-start' : column.align === 'right' ? 'flex-end' : 'center'"
+              [style.text-align]="column.align || 'center'"
               [class.ngxsmk-datatable__header-cell--sortable]="column.sortable"
               [class.ngxsmk-datatable__header-cell--sorted]="isColumnSorted(column)"
               [class.ngxsmk-datatable__header-cell--resizing]="isResizingColumn(column)"
@@ -298,7 +304,7 @@
             @if (rowDetail) {
               <div 
                 class="ngxsmk-datatable__cell ngxsmk-datatable__cell--detail-toggle"
-                [style.width.px]="40"
+                [style.width.px]="50"
                 (click)="toggleRowDetail($event, row, getActualRowIndex(i))"
               >
                 <button 
@@ -332,6 +338,8 @@
               [class]="getCellClass(row, column, row[column.prop || column.id], getActualRowIndex(i))"
               [class.ngxsmk-datatable__cell--multiline]="column.multiLine"
               [style.width.px]="columnWidths[column.id]"
+              [style.justify-content]="column.align === 'left' ? 'flex-start' : column.align === 'right' ? 'flex-end' : 'center'"
+              [style.text-align]="column.align || 'center'"
               (click)="onCellClick($event, row, column, row[column.prop || column.id])"
               (dblclick)="onCellDblClick($event, row, column, row[column.prop || column.id], getActualRowIndex(i))"
             >
@@ -354,6 +362,8 @@
                 [class]="getCellClass(row, column, row[column.prop || column.id], getActualRowIndex(i))"
                 [class.ngxsmk-datatable__cell--multiline]="column.multiLine"
                 [style.width.px]="columnWidths[column.id]"
+                [style.justify-content]="column.align === 'left' ? 'flex-start' : column.align === 'right' ? 'flex-end' : 'center'"
+                [style.text-align]="column.align || 'center'"
                 (click)="onCellClick($event, row, column, row[column.prop || column.id])"
                 (dblclick)="onCellDblClick($event, row, column, row[column.prop || column.id], getActualRowIndex(i))"
               >
@@ -376,6 +386,8 @@
                 [class]="getCellClass(row, column, row[column.prop || column.id], getActualRowIndex(i))"
                 [class.ngxsmk-datatable__cell--multiline]="column.multiLine"
                 [style.width.px]="columnWidths[column.id]"
+                [style.justify-content]="column.align === 'left' ? 'flex-start' : column.align === 'right' ? 'flex-end' : 'center'"
+                [style.text-align]="column.align || 'center'"
                 (click)="onCellClick($event, row, column, row[column.prop || column.id])"
                 (dblclick)="onCellDblClick($event, row, column, row[column.prop || column.id], getActualRowIndex(i))"
               >
